@@ -27,8 +27,6 @@ before_install:
 jobs:
   allow_failures:
     - env: STRICT_VARIABLES=yes TRUSTED_NODE_DATA=yes PUPPET_VERSION="~> 5.0"
-    # SIMP-4516 has been entered to fix the test that won't run in docker
-    - stage: acceptance
 
   include:
     - stage: check
