@@ -260,6 +260,32 @@
         ],
         "value": true
       },
+      "auditd::config::audit_profiles::simp::audit_session_files": {
+        "identifiers": [
+          "SRG-OS-000392-GPOS-00172",
+          "SRG-OS-000470-GPOS-00214",
+          "SRG-OS-000473-GPOS-00218",
+          "RHEL-07-030600"
+        ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_audit_rules_login_events_tallylog"
+        ],
+        "notes": "The SIMP profile applies a base set of audit rules that adhere to guidance from several sources",
+        "value": true
+      },
+      "auditd::config::audit_profiles::simp::audit_session_files_tag": {
+        "identifiers": [
+          "SRG-OS-000392-GPOS-00172",
+          "SRG-OS-000470-GPOS-00214",
+          "SRG-OS-000473-GPOS-00218",
+          "RHEL-07-030600"
+        ],
+        "oval-ids": [
+          "xccdf_org:ssgproject:content_rule_audit_rules_login_events_tallylog"
+        ],
+        "notes": "The SIMP profile applies a base set of audit rules that adhere to guidance from several sources",
+        "value": "logins"
+      },
       "auditd::config::audit_profiles::simp::audit_su_root_activity": {
         "identifiers": [
           "SRG-OS-000327-GPOS-00127",
