@@ -1,3 +1,8 @@
+* Wed Jun 06 2018 Chris Tessmer <chris.tessmer@onyxpoint.com> - 2.3.4-0
+- Added auditd::config::audit_profiles::simp::audit_session_files and
+  auditd::config::audit_profiles::simp::audit_session_files_tag entries
+  for DISA STIG
+
 * Wed Jun 06 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 2.3.4-0
 - Added auditd::action_mail_acct entries for DISA STIG
 - Added auditd::config::audit_profiles::simp::audit_sudoers entries
